# qplugininfo

./: CMakeLists.txt  README.md  qplugininfo.cpp
